feat(api|runtime): add LinkProvider and UnlinkProvider API
